--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    
     <div class="cleaner"></div>
   </div>
-  <div id="footer"> Copyright © 我的爱好</div>
+  <div id="footer"> 龙陈杰 © 我的爱好</div>
 </div>
 <!-- End Of Container -->
 </body>
