--- a/page3.html
+++ b/page3.html
@@ -33,7 +33,7 @@
     </ul>
     <div class="cleaner"></div>
   </div>
-  <div id="footer"> Copyright © 我的爱好</div>
+  <div id="footer"> 龙陈杰 © 我的爱好</div>
 </div>
 <!-- End Of Container -->
 </body>
