--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
 <div class="index_list">
   <ul>
      <li> <a href="index.html">首页</a> </li>
-    <li> <a href="page1.html">唱歌</a> </li>
+    <li> <a href="page1.html">听歌</a> </li>
     <li> <a href="page2.html">旅游</a> </li>
     <li> <a href="page3.html">跑步</a> </li>
   </ul>
@@ -20,12 +20,15 @@
   <div id="content_area">
     <div class="youji_main">
       <div class="title_left">
-        <h1>唱歌</h1>
+        <h1>听歌</h1>
       </div>
       <div class="cleaner"></div>
-      <p>唱歌能使人心情愉悦，增加生活情调，虽然我唱的不好听，但是我挺喜欢</p>
+      <div id="zp">
+      <p>唱歌能使人心情愉悦，增加生活情调</p>
+        <p>虽然我唱的不好听,所以我更喜欢听歌</p>
     </div>
     <div class="cleaner"></div>
+    </div>
   </div>
   <!-- End Of Content area-->
   <div class="share">
