--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <div class=" clear"></div>
   <div class="index_main">
     <h1>自我介绍</h1>
+    <div id="zp">
+    
   </div>
   <div class="share">
    
