--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <div class="index_main">
     <h1>自我介绍</h1>
     <div id="zp">
-    
+    <p>姓名：龙陈杰</p>
+                <p>我的爱好：听歌，旅游，跑步</p>
+                <p>自我评价：性格正常，努力做人，无不良嗜好</p>
+  </div>
   </div>
   <div class="share">
    
