--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 <div class="index_list">
   <ul>
      <li> <a href="index.html">首页</a> </li>
-    <li> <a href="page1.html">唱歌</a> </li>
+    <li> <a href="page1.html">听歌</a> </li>
     <li> <a href="page2.html">旅游</a> </li>
     <li> <a href="page3.html">跑步</a> </li>
   </ul>
@@ -23,7 +23,9 @@
       </div>
       <div class="cleaner"></div>
        <div id="zp">
-      <p>我最大的爱好还是旅游，每年我都会和我的朋友一起组织出去玩一次，可以感受异地风俗文化，增添人生阅历色彩</p>
+      <p>我最大的爱好还是旅游，见天见地见众生</p>
+         <p>读万卷书行万里路</p>
+       <p>灵魂和身体总有一个要在路上</p>
      <div class="cleaner"></div>
   </div>
   <!-- End Of Content area-->
