--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
 <div class="index_list">
   <ul>
      <li> <a href="index.html">首页</a> </li>
-    <li> <a href="page1.html">唱歌</a> </li>
+    <li> <a href="page1.html">听歌</a> </li>
     <li> <a href="page2.html">旅游</a> </li>
     <li> <a href="page3.html">跑步</a> </li>
   </ul>
