--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
       <div class="cleaner"></div>
        <div id="zp">
       <p>我最大的爱好还是旅游，见天见地见众生</p>
-         <p>读万卷书行万里路</p>
+         <p>读万卷书,行万里路</p>
        <p>灵魂和身体总有一个要在路上</p>
      <div class="cleaner"></div>
   </div>
